sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:8: error: not found: value k
  while (k!=longueur){
         ^AlgBubbleSort1:9: error: not found: value k
    for(i<- 0 to longueur-k){
                          ^AlgBubbleSort1:16: error: not found: value k
    k+=1
    ^